# predictive-and-maintenance-project-master-diploma

./: .replit  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: flask_api.py  kafka_consumer.py
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-selectbox-elements-with-the-same-au-1743941848154.txt
models/: anomaly_detection_system.py  isolation_forest.py  lstm_autoencoder.py
utils/: anomaly_detection.py  dashboard_components.py  data_generator.py  external_data_fetcher.py  optimization_components.py
